<resources>
    <string name="app_name">여기만방</string>
    <string name="find_with_map">지도로 방 찾기</string>
    <string name="view_all">전체 매물 보기</string>
    <string name="label_area">면적</string>
    <string name="label_admin_exp">관리비</string>
    <string name="label_structure">형태</string>
    <string name="label_detail_summary">상세설명</string>
    <string name="label_sale_id">등록번호 :</string>
    <string name="naver">NAVER</string>
    <string name="action_settings">설정</string>
    <string name="current_not_support">지원하지 않음</string>
    <string name="image">이미지</string>
    <string name="format_year">전세 %1$d</string>
    <string name="format_month">월세 %1$d / %2$d</string>
    <string name="format_trade">매매 %1$s</string>
    <string name="format_address">%1$s %2$s %3$s, %4$s층</string>
    <string name="bus_stop">정류장</string>
    <string name="metro_station">지하철</string>
</resources>
